--- a/.github/workflows/OSX-14-gpt5-ticker-2.yml
+++ b/.github/workflows/OSX-14-gpt5-ticker-2.yml
@@ -18,6 +18,6 @@ jobs:
     - name: Upload
       uses: actions/upload-artifact@v4
       with:
-        name: Artifact
+        name: Artifact2
         path: |
           .
