--- a/.github/workflows/OSX-14-gpt5-ticker-2.yml
+++ b/.github/workflows/OSX-14-gpt5-ticker-2.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Compile
       run: |
-        make -f Makefile.9-7-c
+        make -f Makefile.9-7-d
     - name: Create tarball
       run: |
         tar -cvf myapp.tgz myapp
