--- a/.github/workflows/OSX-14-gpt5-ticker-2.yml
+++ b/.github/workflows/OSX-14-gpt5-ticker-2.yml
@@ -2,7 +2,7 @@ name: OSX-14-gpt5-ticker
 on:
   push:
     branches:
-    - main
+    - master
 jobs:
   build:
     runs-on: macos-14
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Compile
       run: |
-        make -f Makefile.9-7-d
+        make -f Makefile.9-7-c
     - name: Create tarball
       run: |
         tar -cvf myapp.tgz myapp
